--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,20 +1,23 @@
 .home {
+  
   padding: 2rem 0;
   width: 100%;
   box-sizing: border-box;
+  
 }
 
 .search-form {
   max-width: 600px;
   margin: 0 auto 2rem;
   display: flex;
+  justify-content: center;
   gap: 1rem;
   padding: 0 1rem;
   box-sizing: border-box;
 }
 
 .search-input {
-  flex: 1;
+  flex: .7;
   padding: 0.75rem 1rem;
   border: none;
   border-radius: 4px;
