--- a/src/css/MovieCard.css
+++ b/src/css/MovieCard.css
@@ -7,7 +7,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  max-width: 500px;
+  min-width: 300px;
+  max-width: 600px;
 }
 
 .movie-card:hover {
